@@ -555,19 +555,27 @@ function PMA_displayTableHeaders(&$is_display, &$fields_meta, $fields_cnt = 0, $
         echo '</div>';
 
         // prepare full/partial text button or link
+        $url_params_full_text = array(
+            'db' => $db,
+            'table' => $table,
+            'sql_query' => $sql_query,
+            'goto' => $goto,
+            'full_text_button' => 1
+        );
+
         if ($_SESSION['tmp_user_values']['display_text']=='F') {
             // currently in fulltext mode so show the opposite link
             $tmp_image_file = $GLOBALS['pmaThemeImage'] . 's_partialtext.png';
             $tmp_txt = __('Partial texts');
-            $url_params['display_text'] = 'P';
+            $url_params_full_text['display_text'] = 'P';
         } else {
             $tmp_image_file = $GLOBALS['pmaThemeImage'] . 's_fulltext.png';
             $tmp_txt = __('Full texts');
-            $url_params['display_text'] = 'F';
+            $url_params_full_text['display_text'] = 'F';
         }
 
         $tmp_image = '<img class="fulltext" src="' . $tmp_image_file . '" alt="' . $tmp_txt . '" title="' . $tmp_txt . '" />';
-        $tmp_url = 'sql.php' . PMA_generate_common_url($url_params);
+        $tmp_url = 'sql.php' . PMA_generate_common_url($url_params_full_text);
         $full_or_partial_text_link = PMA_linkOrButton($tmp_url, $tmp_image, array(), false);
         unset($tmp_image_file, $tmp_txt, $tmp_url, $tmp_image);
 
@@ -1816,6 +1824,8 @@ function PMA_displayTable_checkConfigParams()
     } elseif (isset($_REQUEST['display_options_form'])) {
         // we know that the checkbox was unchecked
         unset($_SESSION['tmp_user_values']['query'][$sql_md5]['display_binary']);
+    } elseif (isset($_REQUEST['full_text_button'])) {
+        // do nothing to keep the value that is there in the session
     } else {
         // selected by default because some operations like OPTIMIZE TABLE
         // and all queries involving functions return "binary" contents,
@@ -1829,6 +1839,8 @@ function PMA_displayTable_checkConfigParams()
     } elseif (isset($_REQUEST['display_options_form'])) {
         // we know that the checkbox was unchecked
         unset($_SESSION['tmp_user_values']['query'][$sql_md5]['display_binary_as_hex']);
+    } elseif (isset($_REQUEST['full_text_button'])) {
+        // do nothing to keep the value that is there in the session
     } else {
         // display_binary_as_hex config option
         if (isset($GLOBALS['cfg']['DisplayBinaryAsHex']) && true === $GLOBALS['cfg']['DisplayBinaryAsHex']) {
